Move CLJS app into separate lein project under client/
* `figwheel` script moved to `client/` and should be run from there

* Added `./scripts/test` to update compiled CLJS code for tests
  before running `lein test`